Done:Assignment and Notification at validation and submission